crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_emphasis_complex.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..1176
  HEADING@0..36
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..35
      TEXT@2..35 "Emphasis Complex Case ..."
    NEWLINE@35..36 "\n"
  BLANK_LINE@36..37
    BLANK_LINE@36..37 "\n"
  HEADING@37..51
    ATX_HEADING_MARKER@37..39
      ATX_HEADING_MARKER@37..39 "##"
    WHITESPACE@39..40 " "
    HEADING_CONTENT@40..50
      TEXT@40..50 "Rule of 3s"
    NEWLINE@50..51 "\n"
  BLANK_LINE@51..52
    BLANK_LINE@51..52 "\n"
  PARAGRAPH@52..62
    STRONG@52..61
      STRONG_MARKER@52..54 "**"
      EMPHASIS@54..59
        EMPHASIS_MARKER@54..55 "*"
        TEXT@55..58 "bar"
        EMPHASIS_MARKER@58..59 "*"
      STRONG_MARKER@59..61 "**"
    NEWLINE@61..62 "\n"
  BLANK_LINE@62..63
    BLANK_LINE@62..63 "\n"
  PARAGRAPH@63..70
    TEXT@63..69 "**foo*"
    NEWLINE@69..70 "\n"
  BLANK_LINE@70..71
    BLANK_LINE@70..71 "\n"
  PARAGRAPH@71..78
    TEXT@71..77 "*foo**"
    NEWLINE@77..78 "\n"
  BLANK_LINE@78..79
    BLANK_LINE@78..79 "\n"
  PARAGRAPH@79..88
    TEXT@79..80 "*"
    STRONG@80..87
      STRONG_MARKER@80..82 "**"
      TEXT@82..85 "foo"
      STRONG_MARKER@85..87 "**"
    NEWLINE@87..88 "\n"
  BLANK_LINE@88..89
    BLANK_LINE@88..89 "\n"
  PARAGRAPH@89..98
    STRONG@89..96
      STRONG_MARKER@89..91 "**"
      TEXT@91..94 "foo"
      STRONG_MARKER@94..96 "**"
    TEXT@96..97 "*"
    NEWLINE@97..98 "\n"
  BLANK_LINE@98..99
    BLANK_LINE@98..99 "\n"
  HEADING@99..118
    ATX_HEADING_MARKER@99..101
      ATX_HEADING_MARKER@99..101 "##"
    WHITESPACE@101..102 " "
    HEADING_CONTENT@102..117
      TEXT@102..117 "Nested Emphasis"
    NEWLINE@117..118 "\n"
  BLANK_LINE@118..119
    BLANK_LINE@118..119 "\n"
  PARAGRAPH@119..137
    STRONG@119..136
      STRONG_MARKER@119..121 "**"
      TEXT@121..125 "foo "
      EMPHASIS@125..130
        EMPHASIS_MARKER@125..126 "*"
        TEXT@126..129 "bar"
        EMPHASIS_MARKER@129..130 "*"
      TEXT@130..134 " baz"
      STRONG_MARKER@134..136 "**"
    NEWLINE@136..137 "\n"
  BLANK_LINE@137..138
    BLANK_LINE@137..138 "\n"
  PARAGRAPH@138..156
    EMPHASIS@138..155
      EMPHASIS_MARKER@138..139 "*"
      TEXT@139..143 "foo "
      STRONG@143..150
        STRONG_MARKER@143..145 "**"
        TEXT@145..148 "bar"
        STRONG_MARKER@148..150 "**"
      TEXT@150..154 " baz"
      EMPHASIS_MARKER@154..155 "*"
    NEWLINE@155..156 "\n"
  BLANK_LINE@156..157
    BLANK_LINE@156..157 "\n"
  PARAGRAPH@157..171
    STRONG@157..170
      STRONG_MARKER@157..159 "**"
      EMPHASIS@159..164
        EMPHASIS_MARKER@159..160 "*"
        TEXT@160..163 "foo"
        EMPHASIS_MARKER@163..164 "*"
      TEXT@164..168 " bar"
      STRONG_MARKER@168..170 "**"
    NEWLINE@170..171 "\n"
  BLANK_LINE@171..172
    BLANK_LINE@171..172 "\n"
  PARAGRAPH@172..186
    STRONG@172..185
      STRONG_MARKER@172..174 "**"
      TEXT@174..178 "foo "
      EMPHASIS@178..183
        EMPHASIS_MARKER@178..179 "*"
        TEXT@179..182 "bar"
        EMPHASIS_MARKER@182..183 "*"
      STRONG_MARKER@183..185 "**"
    NEWLINE@185..186 "\n"
  BLANK_LINE@186..187
    BLANK_LINE@186..187 "\n"
  HEADING@187..213
    ATX_HEADING_MARKER@187..189
      ATX_HEADING_MARKER@187..189 "##"
    WHITESPACE@189..190 " "
    HEADING_CONTENT@190..212
      TEXT@190..212 "Overlapping Delimiters"
    NEWLINE@212..213 "\n"
  BLANK_LINE@213..214
    BLANK_LINE@213..214 "\n"
  PARAGRAPH@214..232
    TEXT@214..219 "*foo "
    STRONG@219..231
      STRONG_MARKER@219..221 "**"
      TEXT@221..229 "bar* baz"
      STRONG_MARKER@229..231 "**"
    NEWLINE@231..232 "\n"
  BLANK_LINE@232..233
    BLANK_LINE@232..233 "\n"
  PARAGRAPH@233..251
    TEXT@233..250 "**foo *bar** baz*"
    NEWLINE@250..251 "\n"
  BLANK_LINE@251..252
    BLANK_LINE@251..252 "\n"
  HEADING@252..273
    ATX_HEADING_MARKER@252..254
      ATX_HEADING_MARKER@252..254 "##"
    WHITESPACE@254..255 " "
    HEADING_CONTENT@255..272
      TEXT@255..272 "Adjacent Patterns"
    NEWLINE@272..273 "\n"
  BLANK_LINE@273..274
    BLANK_LINE@273..274 "\n"
  PARAGRAPH@274..285
    TEXT@274..284 "*foo**bar*"
    NEWLINE@284..285 "\n"
  BLANK_LINE@285..286
    BLANK_LINE@285..286 "\n"
  PARAGRAPH@286..298
    EMPHASIS@286..291
      EMPHASIS_MARKER@286..287 "*"
      TEXT@287..290 "foo"
      EMPHASIS_MARKER@290..291 "*"
    TEXT@291..292 " "
    EMPHASIS@292..297
      EMPHASIS_MARKER@292..293 "*"
      TEXT@293..296 "bar"
      EMPHASIS_MARKER@296..297 "*"
    NEWLINE@297..298 "\n"
  BLANK_LINE@298..299
    BLANK_LINE@298..299 "\n"
  PARAGRAPH@299..309
    EMPHASIS@299..304
      EMPHASIS_MARKER@299..300 "*"
      TEXT@300..303 "foo"
      EMPHASIS_MARKER@303..304 "*"
    TEXT@304..308 "bar*"
    NEWLINE@308..309 "\n"
  BLANK_LINE@309..310
    BLANK_LINE@309..310 "\n"
  HEADING@310..344
    ATX_HEADING_MARKER@310..312
      ATX_HEADING_MARKER@310..312 "##"
    WHITESPACE@312..313 " "
    HEADING_CONTENT@313..343
      TEXT@313..343 "Intraword Emphasis (a ..."
    NEWLINE@343..344 "\n"
  BLANK_LINE@344..345
    BLANK_LINE@344..345 "\n"
  PARAGRAPH@345..368
    TEXT@345..347 "un"
    EMPHASIS@347..357
      EMPHASIS_MARKER@347..348 "*"
      TEXT@348..356 "frigging"
      EMPHASIS_MARKER@356..357 "*"
    TEXT@357..367 "believable"
    NEWLINE@367..368 "\n"
  BLANK_LINE@368..369
    BLANK_LINE@368..369 "\n"
  PARAGRAPH@369..394
    TEXT@369..371 "un"
    STRONG@371..383
      STRONG_MARKER@371..373 "**"
      TEXT@373..381 "frigging"
      STRONG_MARKER@381..383 "**"
    TEXT@383..393 "believable"
    NEWLINE@393..394 "\n"
  BLANK_LINE@394..395
    BLANK_LINE@394..395 "\n"
  HEADING@395..431
    ATX_HEADING_MARKER@395..397
      ATX_HEADING_MARKER@395..397 "##"
    WHITESPACE@397..398 " "
    HEADING_CONTENT@398..430
      TEXT@398..430 "Intraword Emphasis (u ..."
    NEWLINE@430..431 "\n"
  BLANK_LINE@431..432
    BLANK_LINE@431..432 "\n"
  PARAGRAPH@432..442
    TEXT@432..441 "feas_ible"
    NEWLINE@441..442 "\n"
  BLANK_LINE@442..443
    BLANK_LINE@442..443 "\n"
  PARAGRAPH@443..457
    TEXT@443..456 "un_frig_gable"
    NEWLINE@456..457 "\n"
  BLANK_LINE@457..458
    BLANK_LINE@457..458 "\n"
  HEADING@458..481
    ATX_HEADING_MARKER@458..460
      ATX_HEADING_MARKER@458..460 "##"
    WHITESPACE@460..461 " "
    HEADING_CONTENT@461..480
      TEXT@461..480 "Whitespace Flanking"
    NEWLINE@480..481 "\n"
  BLANK_LINE@481..482
    BLANK_LINE@481..482 "\n"
  LIST@482..489
    LIST_ITEM@482..489
      LIST_MARKER@482..483 "-"
      WHITESPACE@483..484 " "
      PLAIN@484..489
        TEXT@484..488 "foo*"
        NEWLINE@488..489 "\n"
  BLANK_LINE@489..490
    BLANK_LINE@489..490 "\n"
  PARAGRAPH@490..497
    EMPHASIS@490..496
      EMPHASIS_MARKER@490..491 "*"
      TEXT@491..495 "foo "
      EMPHASIS_MARKER@495..496 "*"
    NEWLINE@496..497 "\n"
  BLANK_LINE@497..498
    BLANK_LINE@497..498 "\n"
  LIST@498..506
    LIST_ITEM@498..506
      LIST_MARKER@498..499 "-"
      WHITESPACE@499..500 " "
      PLAIN@500..506
        TEXT@500..505 "foo *"
        NEWLINE@505..506 "\n"
  BLANK_LINE@506..507
    BLANK_LINE@506..507 "\n"
  PARAGRAPH@507..516
    TEXT@507..515 "** bar**"
    NEWLINE@515..516 "\n"
  BLANK_LINE@516..517
    BLANK_LINE@516..517 "\n"
  PARAGRAPH@517..526
    STRONG@517..525
      STRONG_MARKER@517..519 "**"
      TEXT@519..523 "bar "
      STRONG_MARKER@523..525 "**"
    NEWLINE@525..526 "\n"
  BLANK_LINE@526..527
    BLANK_LINE@526..527 "\n"
  PARAGRAPH@527..537
    TEXT@527..536 "** bar **"
    NEWLINE@536..537 "\n"
  BLANK_LINE@537..538
    BLANK_LINE@537..538 "\n"
  HEADING@538..562
    ATX_HEADING_MARKER@538..540
      ATX_HEADING_MARKER@538..540 "##"
    WHITESPACE@540..541 " "
    HEADING_CONTENT@541..561
      TEXT@541..561 "Punctuation Flanking"
    NEWLINE@561..562 "\n"
  BLANK_LINE@562..563
    BLANK_LINE@562..563 "\n"
  PARAGRAPH@563..571
    TEXT@563..564 "\""
    EMPHASIS@564..569
      EMPHASIS_MARKER@564..565 "*"
      TEXT@565..568 "foo"
      EMPHASIS_MARKER@568..569 "*"
    TEXT@569..570 "\""
    NEWLINE@570..571 "\n"
  BLANK_LINE@571..572
    BLANK_LINE@571..572 "\n"
  PARAGRAPH@572..582
    TEXT@572..573 "\""
    STRONG@573..580
      STRONG_MARKER@573..575 "**"
      TEXT@575..578 "bar"
      STRONG_MARKER@578..580 "**"
    TEXT@580..581 "\""
    NEWLINE@581..582 "\n"
  BLANK_LINE@582..583
    BLANK_LINE@582..583 "\n"
  PARAGRAPH@583..594
    TEXT@583..584 "("
    EMPHASIS@584..592
      EMPHASIS_MARKER@584..585 "*"
      TEXT@585..591 "italic"
      EMPHASIS_MARKER@591..592 "*"
    TEXT@592..593 ")"
    NEWLINE@593..594 "\n"
  BLANK_LINE@594..595
    BLANK_LINE@594..595 "\n"
  PARAGRAPH@595..606
    TEXT@595..596 "("
    STRONG@596..604
      STRONG_MARKER@596..598 "**"
      TEXT@598..602 "bold"
      STRONG_MARKER@602..604 "**"
    TEXT@604..605 ")"
    NEWLINE@605..606 "\n"
  BLANK_LINE@606..607
    BLANK_LINE@606..607 "\n"
  HEADING@607..627
    ATX_HEADING_MARKER@607..609
      ATX_HEADING_MARKER@607..609 "##"
    WHITESPACE@609..610 " "
    HEADING_CONTENT@610..626
      TEXT@610..626 "Mixed Delimiters"
    NEWLINE@626..627 "\n"
  BLANK_LINE@627..628
    BLANK_LINE@627..628 "\n"
  PARAGRAPH@628..646
    TEXT@628..633 "*foo "
    STRONG@633..645
      STRONG_MARKER@633..635 "**"
      TEXT@635..643 "bar* baz"
      STRONG_MARKER@643..645 "**"
    NEWLINE@645..646 "\n"
  BLANK_LINE@646..647
    BLANK_LINE@646..647 "\n"
  PARAGRAPH@647..665
    TEXT@647..664 "**foo *bar** baz*"
    NEWLINE@664..665 "\n"
  BLANK_LINE@665..666
    BLANK_LINE@665..666 "\n"
  PARAGRAPH@666..684
    EMPHASIS@666..683
      EMPHASIS_MARKER@666..667 "*"
      TEXT@667..671 "foo "
      STRONG@671..678
        STRONG_MARKER@671..673 "**"
        TEXT@673..676 "bar"
        STRONG_MARKER@676..678 "**"
      TEXT@678..682 " baz"
      EMPHASIS_MARKER@682..683 "*"
    NEWLINE@683..684 "\n"
  BLANK_LINE@684..685
    BLANK_LINE@684..685 "\n"
  PARAGRAPH@685..703
    STRONG@685..702
      STRONG_MARKER@685..687 "**"
      TEXT@687..691 "foo "
      EMPHASIS@691..696
        EMPHASIS_MARKER@691..692 "_"
        TEXT@692..695 "bar"
        EMPHASIS_MARKER@695..696 "_"
      TEXT@696..700 " baz"
      STRONG_MARKER@700..702 "**"
    NEWLINE@702..703 "\n"
  BLANK_LINE@703..704
    BLANK_LINE@703..704 "\n"
  HEADING@704..732
    ATX_HEADING_MARKER@704..706
      ATX_HEADING_MARKER@704..706 "##"
    WHITESPACE@706..707 " "
    HEADING_CONTENT@707..731
      TEXT@707..731 "Same Character Sequences"
    NEWLINE@731..732 "\n"
  BLANK_LINE@732..733
    BLANK_LINE@732..733 "\n"
  PARAGRAPH@733..747
    STRONG@733..742
      STRONG_MARKER@733..735 "**"
      EMPHASIS@735..740
        EMPHASIS_MARKER@735..736 "*"
        TEXT@736..739 "foo"
        EMPHASIS_MARKER@739..740 "*"
      STRONG_MARKER@740..742 "**"
    TEXT@742..746 " bar"
    NEWLINE@746..747 "\n"
  BLANK_LINE@747..748
    BLANK_LINE@747..748 "\n"
  PARAGRAPH@748..762
    EMPHASIS@748..761
      EMPHASIS_MARKER@748..749 "*"
      STRONG@749..756
        STRONG_MARKER@749..751 "**"
        TEXT@751..754 "foo"
        STRONG_MARKER@754..756 "**"
      TEXT@756..760 " bar"
      EMPHASIS_MARKER@760..761 "*"
    NEWLINE@761..762 "\n"
  BLANK_LINE@762..763
    BLANK_LINE@762..763 "\n"
  PARAGRAPH@763..779
    STRONG@763..771
      STRONG_MARKER@763..765 "**"
      TEXT@765..769 "foo "
      STRONG_MARKER@769..771 "**"
    EMPHASIS@771..776
      EMPHASIS_MARKER@771..772 "*"
      TEXT@772..775 "bar"
      EMPHASIS_MARKER@775..776 "*"
    TEXT@776..778 "**"
    NEWLINE@778..779 "\n"
  BLANK_LINE@779..780
    BLANK_LINE@779..780 "\n"
  HEADING@780..801
    ATX_HEADING_MARKER@780..782
      ATX_HEADING_MARKER@780..782 "##"
    WHITESPACE@782..783 " "
    HEADING_CONTENT@783..800
      TEXT@783..800 "Backslash Escapes"
    NEWLINE@800..801 "\n"
  BLANK_LINE@801..802
    BLANK_LINE@801..802 "\n"
  PARAGRAPH@802..819
    ESCAPED_CHAR@802..804 "\\*"
    TEXT@804..816 "not emphasis"
    ESCAPED_CHAR@816..818 "\\*"
    NEWLINE@818..819 "\n"
  BLANK_LINE@819..820
    BLANK_LINE@819..820 "\n"
  PARAGRAPH@820..835
    ESCAPED_CHAR@820..822 "\\*"
    EMPHASIS@822..834
      EMPHASIS_MARKER@822..823 "*"
      TEXT@823..831 "not bold"
      ESCAPED_CHAR@831..833 "\\*"
      EMPHASIS_MARKER@833..834 "*"
    NEWLINE@834..835 "\n"
  BLANK_LINE@835..836
    BLANK_LINE@835..836 "\n"
  PARAGRAPH@836..855
    EMPHASIS@836..854
      EMPHASIS_MARKER@836..837 "*"
      TEXT@837..844 "escape "
      ESCAPED_CHAR@844..846 "\\*"
      TEXT@846..853 " inside"
      EMPHASIS_MARKER@853..854 "*"
    NEWLINE@854..855 "\n"
  BLANK_LINE@855..856
    BLANK_LINE@855..856 "\n"
  PARAGRAPH@856..878
    STRONG@856..877
      STRONG_MARKER@856..858 "**"
      TEXT@858..865 "escape "
      ESCAPED_CHAR@865..867 "\\*"
      TEXT@867..875 "* inside"
      STRONG_MARKER@875..877 "**"
    NEWLINE@877..878 "\n"
  BLANK_LINE@878..879
    BLANK_LINE@878..879 "\n"
  HEADING@879..901
    ATX_HEADING_MARKER@879..881
      ATX_HEADING_MARKER@879..881 "##"
    WHITESPACE@881..882 " "
    HEADING_CONTENT@882..900
      TEXT@882..900 "Left-Flanking Only"
    NEWLINE@900..901 "\n"
  BLANK_LINE@901..902
    BLANK_LINE@901..902 "\n"
  PARAGRAPH@902..905
    TEXT@902..904 "*a"
    NEWLINE@904..905 "\n"
  BLANK_LINE@905..906
    BLANK_LINE@905..906 "\n"
  PARAGRAPH@906..910
    TEXT@906..909 "**a"
    NEWLINE@909..910 "\n"
  BLANK_LINE@910..911
    BLANK_LINE@910..911 "\n"
  HEADING@911..934
    ATX_HEADING_MARKER@911..913
      ATX_HEADING_MARKER@911..913 "##"
    WHITESPACE@913..914 " "
    HEADING_CONTENT@914..933
      TEXT@914..933 "Right-Flanking Only"
    NEWLINE@933..934 "\n"
  BLANK_LINE@934..935
    BLANK_LINE@934..935 "\n"
  PARAGRAPH@935..938
    TEXT@935..937 "a*"
    NEWLINE@937..938 "\n"
  BLANK_LINE@938..939
    BLANK_LINE@938..939 "\n"
  PARAGRAPH@939..943
    TEXT@939..942 "a**"
    NEWLINE@942..943 "\n"
  BLANK_LINE@943..944
    BLANK_LINE@943..944 "\n"
  HEADING@944..961
    ATX_HEADING_MARKER@944..946
      ATX_HEADING_MARKER@944..946 "##"
    WHITESPACE@946..947 " "
    HEADING_CONTENT@947..960
      TEXT@947..960 "Both Flanking"
    NEWLINE@960..961 "\n"
  BLANK_LINE@961..962
    BLANK_LINE@961..962 "\n"
  PARAGRAPH@962..966
    TEXT@962..965 "a*b"
    NEWLINE@965..966 "\n"
  BLANK_LINE@966..967
    BLANK_LINE@966..967 "\n"
  PARAGRAPH@967..972
    TEXT@967..971 "a**b"
    NEWLINE@971..972 "\n"
  BLANK_LINE@972..973
    BLANK_LINE@972..973 "\n"
  HEADING@973..1001
    ATX_HEADING_MARKER@973..975
      ATX_HEADING_MARKER@973..975 "##"
    WHITESPACE@975..976 " "
    HEADING_CONTENT@976..1000
      TEXT@976..1000 "Underscore Word Boundary"
    NEWLINE@1000..1001 "\n"
  BLANK_LINE@1001..1002
    BLANK_LINE@1001..1002 "\n"
  PARAGRAPH@1002..1014
    TEXT@1002..1013 "foo_bar_baz"
    NEWLINE@1013..1014 "\n"
  BLANK_LINE@1014..1015
    BLANK_LINE@1014..1015 "\n"
  PARAGRAPH@1015..1025
    EMPHASIS@1015..1024
      EMPHASIS_MARKER@1015..1016 "*"
      TEXT@1016..1023 "foo_bar"
      EMPHASIS_MARKER@1023..1024 "*"
    NEWLINE@1024..1025 "\n"
  BLANK_LINE@1025..1026
    BLANK_LINE@1025..1026 "\n"
  PARAGRAPH@1026..1040
    EMPHASIS@1026..1039
      EMPHASIS_MARKER@1026..1027 "*"
      TEXT@1027..1038 "foo_bar_baz"
      EMPHASIS_MARKER@1038..1039 "*"
    NEWLINE@1039..1040 "\n"
  BLANK_LINE@1040..1041
    BLANK_LINE@1040..1041 "\n"
  HEADING@1041..1060
    ATX_HEADING_MARKER@1041..1043
      ATX_HEADING_MARKER@1041..1043 "##"
    WHITESPACE@1043..1044 " "
    HEADING_CONTENT@1044..1059
      TEXT@1044..1059 "Complex Nesting"
    NEWLINE@1059..1060 "\n"
  BLANK_LINE@1060..1061
    BLANK_LINE@1060..1061 "\n"
  PARAGRAPH@1061..1083
    EMPHASIS@1061..1082
      EMPHASIS_MARKER@1061..1062 "*"
      STRONG@1062..1070
        STRONG_MARKER@1062..1064 "**"
        TEXT@1064..1068 "foo "
        STRONG_MARKER@1068..1070 "**"
      TEXT@1070..1073 "bar"
      STRONG@1073..1081
        STRONG_MARKER@1073..1075 "**"
        TEXT@1075..1079 " baz"
        STRONG_MARKER@1079..1081 "**"
      EMPHASIS_MARKER@1081..1082 "*"
    NEWLINE@1082..1083 "\n"
  BLANK_LINE@1083..1084
    BLANK_LINE@1083..1084 "\n"
  PARAGRAPH@1084..1104
    STRONG@1084..1103
      STRONG_MARKER@1084..1086 "**"
      EMPHASIS@1086..1091
        EMPHASIS_MARKER@1086..1087 "*"
        TEXT@1087..1090 "foo"
        EMPHASIS_MARKER@1090..1091 "*"
      TEXT@1091..1096 " bar "
      EMPHASIS@1096..1101
        EMPHASIS_MARKER@1096..1097 "*"
        TEXT@1097..1100 "baz"
        EMPHASIS_MARKER@1100..1101 "*"
      STRONG_MARKER@1101..1103 "**"
    NEWLINE@1103..1104 "\n"
  BLANK_LINE@1104..1105
    BLANK_LINE@1104..1105 "\n"
  PARAGRAPH@1105..1138
    STRONG@1105..1137
      STRONG_MARKER@1105..1107 "**"
      TEXT@1107..1111 "foo "
      EMPHASIS@1111..1131
        EMPHASIS_MARKER@1111..1112 "*"
        TEXT@1112..1116 "bar "
        STRONG@1116..1126
          STRONG_MARKER@1116..1118 "**"
          TEXT@1118..1124 "nested"
          STRONG_MARKER@1124..1126 "**"
        TEXT@1126..1130 " baz"
        EMPHASIS_MARKER@1130..1131 "*"
      TEXT@1131..1135 " qux"
      STRONG_MARKER@1135..1137 "**"
    NEWLINE@1137..1138 "\n"
  BLANK_LINE@1138..1139
    BLANK_LINE@1138..1139 "\n"
  HEADING@1139..1157
    ATX_HEADING_MARKER@1139..1141
      ATX_HEADING_MARKER@1139..1141 "##"
    WHITESPACE@1141..1142 " "
    HEADING_CONTENT@1142..1156
      TEXT@1142..1156 "Empty Emphasis"
    NEWLINE@1156..1157 "\n"
  BLANK_LINE@1157..1158
    BLANK_LINE@1157..1158 "\n"
  PARAGRAPH@1158..1161
    TEXT@1158..1160 "**"
    NEWLINE@1160..1161 "\n"
  BLANK_LINE@1161..1162
    BLANK_LINE@1161..1162 "\n"
  HORIZONTAL_RULE@1162..1166
    HORIZONTAL_RULE@1162..1165 "---"
    NEWLINE@1165..1166 "\n"
  BLANK_LINE@1166..1167
    BLANK_LINE@1166..1167 "\n"
  LIST@1167..1171
    LIST_ITEM@1167..1171
      LIST_MARKER@1167..1168 "-"
      WHITESPACE@1168..1169 " "
      LIST@1169..1171
        LIST_ITEM@1169..1171
          LIST_MARKER@1169..1170 "*"
          NEWLINE@1170..1171 "\n"
  BLANK_LINE@1171..1172
    BLANK_LINE@1171..1172 "\n"
  HORIZONTAL_RULE@1172..1176
    HORIZONTAL_RULE@1172..1175 "---"
    NEWLINE@1175..1176 "\n"
