crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_emphasis_lazy_opener_preference_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..15
  PARAGRAPH@0..15
    TEXT@0..5 "*foo "
    EMPHASIS@5..14
      EMPHASIS_MARKER@5..6 "*"
      TEXT@6..13 "bar baz"
      EMPHASIS_MARKER@13..14 "*"
    NEWLINE@14..15 "\n"
