crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_emphasis_split_runs_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..72
  PARAGRAPH@0..7
    TEXT@0..1 "*"
    EMPHASIS@1..6
      EMPHASIS_MARKER@1..2 "*"
      TEXT@2..5 "foo"
      EMPHASIS_MARKER@5..6 "*"
    NEWLINE@6..7 "\n"
  BLANK_LINE@7..8
    BLANK_LINE@7..8 "\n"
  PARAGRAPH@8..15
    TEXT@8..9 "_"
    EMPHASIS@9..14
      EMPHASIS_MARKER@9..10 "_"
      TEXT@10..13 "foo"
      EMPHASIS_MARKER@13..14 "_"
    NEWLINE@14..15 "\n"
  BLANK_LINE@15..16
    BLANK_LINE@15..16 "\n"
  PARAGRAPH@16..23
    EMPHASIS@16..21
      EMPHASIS_MARKER@16..17 "*"
      TEXT@17..20 "foo"
      EMPHASIS_MARKER@20..21 "*"
    TEXT@21..22 "*"
    NEWLINE@22..23 "\n"
  BLANK_LINE@23..24
    BLANK_LINE@23..24 "\n"
  PARAGRAPH@24..31
    EMPHASIS@24..29
      EMPHASIS_MARKER@24..25 "_"
      TEXT@25..28 "foo"
      EMPHASIS_MARKER@28..29 "_"
    TEXT@29..30 "_"
    NEWLINE@30..31 "\n"
  BLANK_LINE@31..32
    BLANK_LINE@31..32 "\n"
  PARAGRAPH@32..42
    EMPHASIS@32..41
      EMPHASIS_MARKER@32..33 "*"
      STRONG@33..40
        STRONG_MARKER@33..35 "**"
        TEXT@35..38 "foo"
        STRONG_MARKER@38..40 "**"
      EMPHASIS_MARKER@40..41 "*"
    NEWLINE@41..42 "\n"
  BLANK_LINE@42..43
    BLANK_LINE@42..43 "\n"
  PARAGRAPH@43..55
    EMPHASIS@43..54
      EMPHASIS_MARKER@43..44 "*"
      TEXT@44..48 "foo "
      EMPHASIS@48..53
        EMPHASIS_MARKER@48..49 "*"
        TEXT@49..52 "bar"
        EMPHASIS_MARKER@52..53 "*"
      EMPHASIS_MARKER@53..54 "*"
    NEWLINE@54..55 "\n"
  BLANK_LINE@55..56
    BLANK_LINE@55..56 "\n"
  PARAGRAPH@56..72
    TEXT@56..59 "foo"
    EMPHASIS@59..68
      EMPHASIS_MARKER@59..60 "*"
      STRONG@60..67
        STRONG_MARKER@60..62 "**"
        TEXT@62..65 "bar"
        STRONG_MARKER@65..67 "**"
      EMPHASIS_MARKER@67..68 "*"
    TEXT@68..71 "baz"
    NEWLINE@71..72 "\n"
